[gd_scene load_steps=3 format=3 uid="uid://p1k7ttutslso"]

[ext_resource type="Theme" uid="uid://f3cwprpras7p" path="res://UI/theme.tres" id="1_2ulgk"]
[ext_resource type="Script" path="res://UI/ActionUI.gd" id="2_hiqjc"]

[node name="ActionMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.5
offset_top = -33.0
offset_right = 25.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2ulgk")
script = ExtResource("2_hiqjc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Move" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Move
"

[node name="Attack" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Attack"

[node name="Items" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Items"

[node name="Wait" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
text = "Wait"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Move" to="." method="_on_move_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Wait" to="." method="_on_wait_pressed"]
